--- a/sass/layout/_post.scss
+++ b/sass/layout/_post.scss
@@ -1536,6 +1536,15 @@
         &:hover {
             text-decoration: underline;
         }
+
+        &.post__permalink--button {
+            background: none;
+            border: none;
+            color: inherit;
+            display: inline;
+            outline: none;
+            padding: 0;
+        }
     }
 
     .post-loading-gif {
